Modified DHCP api
