# app/Http/Controllers/API/DhcpController.php
@@ -5,7 +5,7 @@ namespace App\Http\Controllers\API;
 use App\Http\Controllers\Controller;
 use App\Dhcp;
 use Illuminate\Http\Request;
-use App\Http\Resources\DhcpCollection;
+use App\Http\Resources\DhcpResource;
 
 class DhcpController extends Controller
 {
@@ -16,18 +16,44 @@ class DhcpController extends Controller
      */
     public function index(Request $request)
     {
-        //return Dhcp::all()->paginate(100);
+        $alldhcp = Dhcp::all();
+
+        $returndhcp = $alldhcp;
+
         if($request->paginate)
         {
             $paginate = $request->paginate;
         } else {
-            $paginate = 100;
+            $paginate = env("DEFAULT_PAGINATION");
         }
-        //$scopes = collect(Dhcp::all()->paginate($paginate, 'page', $request->page));
-        $scopes = Dhcp::all()->paginate($paginate, 'page', $request->page);
-        //return new DhcpCollection(collect(Dhcp::all()->paginate(100, 'page', $request->page)));
-        return new DhcpCollection($scopes);
 
+        if($request->has('filter.name'))
+        {
+            $name = $request->filter['name'];
+            $returndhcp = $returndhcp->filter(function ($item) use ($name) {
+                return false !== stripos(strtolower($item->name), strtolower($name));
+            });
+        }
+
+        if($request->has('filter.description'))
+        {
+            $description = $request->filter['description'];
+            $returndhcp = $returndhcp->filter(function ($item) use ($description) {
+                return false !== stripos(strtolower($item->description), strtolower($description));
+            });
+        }
+
+        if($request->has('filter.scopeid'))
+        {
+            $scopeid = $request->filter['scopeid'];
+            $returndhcp = $returndhcp->filter(function ($item) use ($scopeid) {
+                return false !== stripos(strtolower($item->scopeID), strtolower($scopeid));
+            });
+        }
+
+        //$scopes = Dhcp::all()->paginate($paginate, 'page', $request->page);
+        //return new DhcpCollection($scopes);
+        return DhcpResource::collection($returndhcp)->paginate($paginate, 'page', $request->page);
     }
 
     /**
